Bug fix: Added State_Prestart to disable input after takedown && new notifier in top bottom disengage montages to set the game state to State_InGame, which reenables input
Next step:
Add the Top Bottom abilities and montages for the right side

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -91,7 +91,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Neutral.RightStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.Sprawl",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.DisengageA",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.DisengageA_TopBottom",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.DisengageR",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.DisengageR_TopBottom",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HeavySnap",DevComment="")
@@ -119,6 +121,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.CancelBothAnimationTopBottomIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimationWithSnap",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelReactionReceiver",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.Continue",DevComment="")
