Added top bottom idle to the right side too. Also added the transition from the rightHighC and the unstoppable rightHighC to Right Top Bottom

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -69,6 +69,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag2",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.RightTopBottom.Idle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
@@ -111,6 +112,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.RightHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightTopBottom.Idle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd",DevComment="")
