temp commit (might need to be deleted)

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -29,8 +29,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.HF_RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.LeftTopBottomIdle",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.LeftTopBottomSpiralTilt",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.Right",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.RightTopBottomIdle",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageA",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageR",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HandFight",DevComment="")
@@ -40,8 +43,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.LeftTopBottomIdle",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.LeftTopBottomSpiralTilt",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.RightTopBottomIdle",DevComment="")
 +GameplayTagList=(Tag="Special.DrainedOut",DevComment="")
 +GameplayTagList=(Tag="Special.Miss",DevComment="")
 +GameplayTagList=(Tag="Stamina.Recovery",DevComment="")
@@ -63,6 +69,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.LeftHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftTopBottom.Idle",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftTopBottom.SpiralTilt",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
@@ -105,6 +112,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.LeftHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftTopBottom.Idle",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftTopBottom.SpiralTilt",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
