--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -79,6 +79,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.RightTopBottom.Idle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.SpiraltoCraddle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HandFight",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HighC",DevComment="")
