--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -28,8 +28,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.Breakdown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HeavySnap",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.HF_LeftUnderhook",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HF_LeftWristGrab",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.HF_RightUnderhook",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HF_RightWristGrab",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.HF_Underhook",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.LeftTopBottomIdle",DevComment="")
@@ -43,8 +46,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageR",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HeavySnap",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.HF_LeftUnderhook",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HF_LeftWristGrab",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.HF_RightUnderhook",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HF_RightWristGrab",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.HF_Underhook",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
@@ -64,6 +70,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.HandFight",DevComment="")
 +GameplayTagList=(Tag="State.Neutral",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Blocked.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.Blocked.LeftUnderhook",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.Blocked.RightUnderhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Breakdown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Dash.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Dash.RightWristGrab",DevComment="")
@@ -77,6 +85,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.LeftHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftTopBottom.Idle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftTopBottom.SpiralTilt",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftUnderhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Pin",DevComment="")
@@ -85,16 +94,19 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.RightHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightTopBottom.Idle",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.RightUnderhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
-+GameplayTagList=(Tag="Trigger.Attacker.SpiraltoCraddle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HandFight",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.LeftHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.RightHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.Underhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Block.LeftUnderhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Block.RightUnderhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.PerfectIdle",DevComment="")
@@ -123,6 +135,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftTopBottom.Idle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftTopBottom.SpiralTilt",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftUnderhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.Pin",DevComment="")
@@ -132,6 +145,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.RightHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightTopBottom.Idle",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightUnderhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd",DevComment="")
@@ -139,6 +153,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.HighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.LeftHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.RightHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.Underhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
