--- a/BatsToiSupreme_Real.uproject
+++ b/BatsToiSupreme_Real.uproject
@@ -11,6 +11,11 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
+		},
+		{
+			"Name": "BatsToiSupreme_RealEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
