--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -124,4 +124,5 @@ PerPlatformBuildTarget=()
 
 [/Script/CommonInput.CommonInputSettings]
 bAllowOutOfFocusDeviceInput=True
+bEnableEnhancedInputSupport=True
 
