--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,10 +26,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/BatsToiSupreme")
 AssetManagerClassName=/Script/GASCompanion.GSCAssetManager
 bSmoothFrameRate=True
-SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=60.000000))
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=120.000000))
 bUseFixedFrameRate=False
 FixedFrameRate=30.000000
-MinDesiredFrameRate=25.000000
+MinDesiredFrameRate=35.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -115,3 +115,11 @@ r.RayTracing.UseTextureLod=True
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+MaxSubstepDeltaTime=0.008333
+MaxSubsteps=12
+
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+MaxClientRate=80000
+MaxInternetClientRate=80000
