--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -125,3 +125,7 @@ PerPlatformBuildTarget=()
 [/Script/CommonInput.CommonInputSettings]
 bAllowOutOfFocusDeviceInput=True
 
+[/Script/Engine.GameNetworkManager]
+TotalNetBandwidth=32000
+MaxDynamicBandwidth=10000
+MinDynamicBandwidth=6000
