Ability sync animation

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -17,6 +17,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightHeavy",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightLight",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Dash",DevComment="")
++GameplayTagList=(Tag="Action.Neutral.HeavyAttack",DevComment="")
++GameplayTagList=(Tag="Action.Neutral.LightAttack",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Sprawl",DevComment="")
 +GameplayTagList=(Tag="AttackState.CanAttack",DevComment="")
 +GameplayTagList=(Tag="Attribute.Invicible",DevComment="")
