Cleanup + setup shoulder pop

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -45,6 +45,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightHipHeistToStand",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightTopBottomIdle",DevComment="")
++GameplayTagList=(Tag="Reaction.Neutral.ShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.Breakdown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageA",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageR",DevComment="")
