--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Counter.LeftHeavyArmDrag",DevComment="")
++GameplayTagList=(Tag="Action.HandFight.ArmDrag",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.Attack",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.Idle.Receiver",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftHeavy",DevComment="")
