TimeSquare map: Select Player

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=BatsToiSupreme
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/PlayerMap.PlayerMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/PlayerMap.PlayerMap
+EditorStartupMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
+GameDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode_LocalMultiplayer.ThirdPersonGameMode_LocalMultiplayer_C
+GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/UI_Multi/BP_UIMultiGameMode.BP_UIMultiGameMode_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
 
