re imported down bloack animations and mirrrors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,9 +108,11 @@ r.SkinCache.CompileShaders=True
 r.TextureStreaming=True
 r.Streaming.PoolSize=1500
 r.SkinCache.SceneMemoryLimitInMB=200.000000
-r.RayTracing=False
+r.RayTracing=True
 r.RayTracing.Shadows=True
 r.RayTracing.UseTextureLod=True
+r.Lumen.HardwareRayTracing=True
+r.GenerateMeshDistanceFields=True
 
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
