--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=BatsToiSupreme
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/PlayerMap.PlayerMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/PlayerMap.PlayerMap
+EditorStartupMap=/Game/_BatstoiRefactor/Maps/Tests/LVMap_TestMultiLocomotion.LVMap_TestMultiLocomotion
+GameDefaultMap=/Game/_BatstoiRefactor/Maps/Tests/LVMap_TestMultiLocomotion.LVMap_TestMultiLocomotion
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode_LocalMultiplayer.ThirdPersonGameMode_LocalMultiplayer_C
+GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
 
@@ -123,3 +123,4 @@ MaxSubsteps=12
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 MaxClientRate=80000
 MaxInternetClientRate=80000
+
