--- a/BatsToiSupreme_Real.uproject
+++ b/BatsToiSupreme_Real.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.2",
+	"EngineAssociation": "{7F897D5E-4FF0-ACA0-27B5-C689798350F3}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
