--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -28,9 +28,7 @@ bPreventGlobalDataInitialization=True
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
-LaunchOnTarget=
-StagingDirectory=(Path="E:/Unreal Projects/Tekfall Demo/Windows")
+BuildTarget=BatsToiSupreme_Real
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -48,6 +46,7 @@ bForceOneChunkPerFile=False
 MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
+WriteBackMetadataToAssetRegistry=Disabled
 bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
@@ -76,47 +75,48 @@ bCookAll=False
 bCookMapsOnly=False
 bSkipEditorContent=False
 bSkipMovies=False
--IniKeyBlacklist=KeyStorePassword
--IniKeyBlacklist=KeyPassword
--IniKeyBlacklist=rsa.privateexp
--IniKeyBlacklist=rsa.modulus
--IniKeyBlacklist=rsa.publicexp
--IniKeyBlacklist=aes.key
--IniKeyBlacklist=SigningPublicExponent
--IniKeyBlacklist=SigningModulus
--IniKeyBlacklist=SigningPrivateExponent
--IniKeyBlacklist=EncryptionKey
--IniKeyBlacklist=DevCenterUsername
--IniKeyBlacklist=DevCenterPassword
--IniKeyBlacklist=IOSTeamID
--IniKeyBlacklist=SigningCertificate
--IniKeyBlacklist=MobileProvision
--IniKeyBlacklist=IniKeyBlacklist
--IniKeyBlacklist=IniSectionBlacklist
-+IniKeyBlacklist=KeyStorePassword
-+IniKeyBlacklist=KeyPassword
-+IniKeyBlacklist=rsa.privateexp
-+IniKeyBlacklist=rsa.modulus
-+IniKeyBlacklist=rsa.publicexp
-+IniKeyBlacklist=aes.key
-+IniKeyBlacklist=SigningPublicExponent
-+IniKeyBlacklist=SigningModulus
-+IniKeyBlacklist=SigningPrivateExponent
-+IniKeyBlacklist=EncryptionKey
-+IniKeyBlacklist=DevCenterUsername
-+IniKeyBlacklist=DevCenterPassword
-+IniKeyBlacklist=IOSTeamID
-+IniKeyBlacklist=SigningCertificate
-+IniKeyBlacklist=MobileProvision
-+IniKeyBlacklist=IniKeyBlacklist
-+IniKeyBlacklist=IniSectionBlacklist
--IniSectionBlacklist=HordeStorageServers
-+IniSectionBlacklist=HordeStorageServers
-+MapsToCook=(FilePath="PlayerMap")
+-IniKeyDenylist=KeyStorePassword
+-IniKeyDenylist=KeyPassword
+-IniKeyDenylist=rsa.privateexp
+-IniKeyDenylist=rsa.modulus
+-IniKeyDenylist=rsa.publicexp
+-IniKeyDenylist=aes.key
+-IniKeyDenylist=SigningPublicExponent
+-IniKeyDenylist=SigningModulus
+-IniKeyDenylist=SigningPrivateExponent
+-IniKeyDenylist=EncryptionKey
+-IniKeyDenylist=DevCenterUsername
+-IniKeyDenylist=DevCenterPassword
+-IniKeyDenylist=IOSTeamID
+-IniKeyDenylist=SigningCertificate
+-IniKeyDenylist=MobileProvision
+-IniKeyDenylist=IniKeyDenylist
+-IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=IniKeyDenylist
++IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=KeyStorePassword
++IniKeyDenylist=KeyPassword
++IniKeyDenylist=rsa.privateexp
++IniKeyDenylist=rsa.modulus
++IniKeyDenylist=rsa.publicexp
++IniKeyDenylist=aes.key
++IniKeyDenylist=SigningPublicExponent
++IniKeyDenylist=SigningModulus
++IniKeyDenylist=SigningPrivateExponent
++IniKeyDenylist=EncryptionKey
++IniKeyDenylist=DevCenterUsername
++IniKeyDenylist=DevCenterPassword
++IniKeyDenylist=IOSTeamID
++IniKeyDenylist=SigningCertificate
++IniKeyDenylist=MobileProvision
++IniKeyDenylist=IniKeyBlacklist
++IniKeyDenylist=IniSectionBlacklist
+-IniSectionDenylist=HordeStorageServers
+-IniSectionDenylist=StorageServers
++IniSectionDenylist=StorageServers
++IniSectionDenylist=HordeStorageServers
++MapsToCook=(FilePath="/Game/_BatstoiRefactor/Maps/Tests/LVMap_TestMultiLocomotion")
 +DirectoriesToAlwaysCook=(Path="/Game/Cinematics/Sequences/RenzoReel/RenzoReelMaster")
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=()
 
 [/Script/GASCompanionEditor.GSCGameplayAbilityCreationMenu]
 +Definitions=(MenuPath="Common|Melee",BaseName="Melee",ParentClass=Class'"/Script/GASCompanion.GSCGameplayAbility_MeleeBase"',AssetPrefix="GA_",TooltipText=NSLOCTEXT("GASCompanionEditor", "GA_GSC_Melee_Base_Tooltip", "Melee Ability with combo capabilities.\n\nDefine a list of Montages to play and setup the Combo Notify States in Montages"))
@@ -130,3 +130,4 @@ bEnableEnhancedInputSupport=True
 TotalNetBandwidth=32000
 MaxDynamicBandwidth=10000
 MinDynamicBandwidth=6000
+
