--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,10 +5,10 @@ GameName=BatsToiSupreme
 EditorStartupMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 GameDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/UI_Multi/BP_UIMultiGameMode.BP_UIMultiGameMode_C
+GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
 
