--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Counter.LeftHeavyArmDrag",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.ArmDrag",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.Attack",DevComment="")
++GameplayTagList=(Tag="Action.HandFight.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.Idle.Receiver",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftHeavy",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftLight",DevComment="")
@@ -46,6 +47,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightHipHeistToStand",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightTopBottomIdle",DevComment="")
++GameplayTagList=(Tag="Reaction.HandFight.ArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Neutral.ShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.Breakdown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageA",DevComment="")
