Needfix Increase Mash Amount

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.HandFight.Attack",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.Idle.Receiver",DevComment="")
++GameplayTagList=(Tag="Action.HandFight.LoseStruggle",DevComment="")
++GameplayTagList=(Tag="Action.HandFight.WinStruggle",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftHeavy",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftLight",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightHeavy",DevComment="")
@@ -22,6 +24,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Neutral.HeavyAttack",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.LightAttack",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Sprawl",DevComment="")
++GameplayTagList=(Tag="Action.Neutral.Struggle",DevComment="")
 +GameplayTagList=(Tag="AttackState.CanAttack",DevComment="")
 +GameplayTagList=(Tag="Attribute.Invicible",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.HeavyAttack",DevComment="")
