--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,13 +4,14 @@ GameName=BatsToiSupreme
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 GameDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
-TransitionMap=
+TransitionMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultServerGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
 bOffsetPlayerGamepadIds=True
+ServerDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
