--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ Plugins/*/Binaries/*
 # Builds
 Build/*
 BuildServer/*
+WindowsServer/*
 BuildClient/*
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
