--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ Build/*
 BuildServer/*
 WindowsServer/*
 BuildClient/*
+Windows/
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
