--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=BatsToiSupreme
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/Cathy_ModernArenaWithCrowd.Cathy_ModernArenaWithCrowd
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Cathy_ModernArenaWithCrowd.Cathy_ModernArenaWithCrowd
+EditorStartupMap=/Game/_BatstoiRefactor/Maps/LevelSelect.LevelSelect
+GameDefaultMap=/Game/_BatstoiRefactor/Maps/LevelSelect.LevelSelect
 TransitionMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode_LocalMultiplayer.ThirdPersonGameMode_LocalMultiplayer_C
+GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTLevelSelectGameMode.BP_BTLevelSelectGameMode_C
 GlobalDefaultServerGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
 bOffsetPlayerGamepadIds=True
 ServerDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
