--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=BatsToiSupreme
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_BatstoiRefactor/Maps/LevelSelect.LevelSelect
-GameDefaultMap=/Game/_BatstoiRefactor/Maps/LevelSelect.LevelSelect
+EditorStartupMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
+GameDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 TransitionMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTLevelSelectGameMode.BP_BTLevelSelectGameMode_C
+GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTLocalOfflineGameMode.BP_BTLocalOfflineGameMode_C
 GlobalDefaultServerGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
 bOffsetPlayerGamepadIds=True
 ServerDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
