--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -81,6 +81,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.RightHipHeistToStand",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightTopBottomIdle",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.ShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Special.DrainedOut",DevComment="")
 +GameplayTagList=(Tag="Special.Miss",DevComment="")
 +GameplayTagList=(Tag="Stamina.Recovery",DevComment="")
